# dusklight

./: .gitmodules  CMakeLists.txt  CMakePresets.json  README.md  files.cmake  flake.nix
.github/workflows/: build.yml
cmake/: ModSDK.cmake
docs/: building.md
include/: global.h
include/d/: d_bg_w_kcol.h  d_com_inf_game.h  d_file_sel_info.h  d_item_data.h  d_menu_dmap.h  d_menu_ring.h  d_msg_flow.h  d_save.h  d_select_cursor.h
include/d/actor/: d_a_alink.h  d_a_mirror.h
include/dusk/: achievements.h  config_var.hpp  discord_presence.hpp  dvd_asset.hpp  frame_interpolation.h  game_clock.h  gyro_aim.h  heaptrack.hpp  main.h  map_loader_definitions.h  settings.h  vmem.h
include/dusk/audio/: DuskAudioSystem.h
include/m_Do/: m_Do_dvd_thread.h  m_Do_graphic.h
include/mods/: api.h  hook.hpp  meta.hpp  service.hpp
libs/JSystem/include/JSystem/J3DGraphAnimator/: J3DMaterialAttach.h
libs/JSystem/include/JSystem/J3DGraphBase/: J3DMatBlock.h  J3DMaterial.h  J3DPacket.h
libs/JSystem/include/JSystem/JKernel/: JKRExpHeap.h  JKRSolidHeap.h
libs/JSystem/include/JSystem/JUtility/: JUTFader.h
libs/JSystem/src/J3DGraphAnimator/: J3DMaterialAttach.cpp  J3DModel.cpp
libs/JSystem/src/J3DGraphBase/: J3DMaterial.cpp  J3DPacket.cpp
libs/JSystem/src/J3DGraphLoader/: J3DModelLoader.cpp
libs/JSystem/src/JFramework/: JFWDisplay.cpp
libs/JSystem/src/JKernel/: JKRAramArchive.cpp  JKRArchivePub.cpp  JKRExpHeap.cpp  JKRMemArchive.cpp  JKRSolidHeap.cpp
libs/JSystem/src/JStudio/JStudio/: fvb.cpp
libs/JSystem/src/JUtility/: JUTFader.cpp
patches/dawn/: 0001-sdl2shim-fbdev-present.patch  0002-mali-persistent-buffer-copy.patch  0003-mali-gl-draw-state-fbo-opts.patch  0004-p4-present-scoped-makecurrent.patch  0005-p4-egl-interop-fences.patch
res/rml/: overlay.rcss  prelaunch.rcss  window.rcss
src/d/: d_bg_w_kcol.cpp  d_bright_check.cpp  d_camera.cpp  d_com_inf_game.cpp  d_drawlist.cpp  d_event.cpp  d_eye_hl.cpp  d_file_sel_info.cpp  d_file_select.cpp  d_item.cpp  d_item_data.cpp  d_k_wmark.cpp  d_kankyo.cpp  d_kankyo_rain.cpp  d_kantera_icon_meter.cpp  d_kyeff.cpp  d_map_path.cpp  d_menu_collect.cpp  d_menu_dmap.cpp  d_menu_fishing.cpp  d_menu_fmap.cpp  d_menu_fmap2D.cpp  d_menu_letter.cpp  d_menu_ring.cpp  d_menu_save.cpp  d_menu_window.cpp  d_meter2.cpp  d_meter2_draw.cpp  d_meter2_info.cpp  d_meter_button.cpp  d_meter_map.cpp  d_model.cpp  d_msg_class.cpp  d_msg_flow.cpp  d_msg_object.cpp  d_msg_scrn_howl.cpp  d_msg_scrn_place.cpp  d_msg_scrn_talk.cpp  d_msg_unit.cpp  d_name.cpp  (+6 more)
src/d/actor/: d_a_alink.cpp  d_a_alink_HIO_data.inc  d_a_alink_demo.inc  d_a_alink_dusk.cpp  d_a_alink_effect.inc  d_a_alink_hook.inc  d_a_alink_link.inc  d_a_b_bq.cpp  d_a_b_ds.cpp  d_a_balloon_2D.cpp  d_a_coach_2D.cpp  d_a_door_shutter.cpp  d_a_e_mk.cpp  d_a_e_pm.cpp  d_a_e_rd.cpp  d_a_e_wb.cpp  d_a_mg_rod.cpp  d_a_midna.cpp  d_a_mirror.cpp  d_a_movie_player.cpp  d_a_npc.cpp  d_a_npc_fairy.cpp  d_a_npc_fairy_seirei.cpp  d_a_npc_gro.cpp  d_a_npc_grr.cpp  d_a_npc_grs.cpp  d_a_npc_impal.cpp  d_a_npc_kkri.cpp  d_a_npc_myna2.cpp  d_a_npc_ne.cpp  d_a_npc_ykw.cpp  d_a_obj_Lv5Key.cpp  d_a_obj_fchain.cpp  d_a_obj_gb.cpp  d_a_obj_life_container.cpp  d_a_obj_master_sword.cpp  d_a_obj_sWallShutter.cpp  d_a_obj_smallkey.cpp  d_a_obj_wchain.cpp  d_a_player.cpp  (+4 more)
src/dusk/: achievements.cpp  config.cpp  crash_handler.cpp  crash_handler.h  crash_reporting.cpp  discord_presence.cpp  dvd_asset.cpp  file_select.cpp  file_select.hpp  frame_interpolation.cpp  game_clock.cpp  gfx.hpp  gyro_aim.cpp  heaptrack.cpp  iso_validate.cpp  iso_validate.hpp  livesplit.cpp  logging.cpp  main.cpp  settings.cpp  stubs.cpp  update_check.cpp  vmem.cpp
src/dusk/archipelago/: archipelago_context.cpp  archipelago_context.hpp
src/dusk/cosmetics/: color_utils.cpp  color_utils.hpp  texture_utils.cpp  texture_utils.hpp
src/dusk/http/: http.hpp
src/dusk/imgui/: ImGuiArchipelagoDebug.cpp  ImGuiCameraOverlay.cpp  ImGuiConsole.cpp  ImGuiConsole.hpp  ImGuiControllerOverlay.cpp  ImGuiDebugPad.cpp  ImGuiEngine.cpp  ImGuiFirstRunPreset.cpp  ImGuiHeapOverlay.cpp  ImGuiMenuEnhancements.cpp  ImGuiMenuGame.cpp  ImGuiMenuGame.hpp  ImGuiMenuRandomizer.cpp  ImGuiMenuRandomizer.hpp  ImGuiMenuTools.cpp  ImGuiMenuTools.hpp  ImGuiProcessOverlay.cpp  ImGuiSaveEditor.cpp  ImGuiStateShare.cpp
src/dusk/modding/: bundle_disk.cpp  mod_loader.cpp  mod_loader_overlay.cpp
src/dusk/mods/loader/: loader.cpp
src/dusk/mods/svc/: registry.cpp
src/dusk/randomizer/: randomizer.cmake
src/dusk/randomizer/assets/textures/: shadow_crystal.bti
src/dusk/randomizer/data/: items.yaml
src/dusk/randomizer/game/: randomizer_context.cpp  randomizer_context.hpp  tools.cpp  tools.h
src/dusk/randomizer/generator/: randomizer.cpp  randomizer.hpp
src/dusk/randomizer/generator/data/: flow_patches.yaml  items.yaml  locations.yaml  object_patches.yaml  settings_list.yaml
src/dusk/randomizer/generator/logic/: entrance.cpp  entrance.hpp  fill.cpp  hints.cpp  hints.hpp  item_pool.cpp  spoiler_log.cpp  world.cpp  world.hpp
src/dusk/randomizer/generator/seedgen/: config.cpp  config.hpp  settings.cpp  settings.hpp
src/dusk/randomizer/logic/: entrance_shuffle.cpp  fill.cpp  item.cpp  item_pool.cpp  requirement.cpp  requirement.hpp  search.cpp  search.hpp  world.cpp  world.hpp
src/dusk/randomizer/logic/flatten/: bits.cpp  bits.hpp  (+1 more)
src/dusk/randomizer/test/: test.cpp
src/dusk/tphd/: HdAssetLayer.cpp  HdAssetLayer.hpp  LosTable.cpp  LosTable.hpp
src/dusk/ui/: achievements.cpp  archi_connect_modal.cpp  button.cpp  controller_config.cpp  controller_config.hpp  cosmetics.cpp  cosmetics.hpp  editor.cpp  graphics_tuner.cpp  graphics_tuner.hpp  menu_bar.cpp  modal.cpp  number_button.cpp  overlay.cpp  overlay.hpp  prelaunch.cpp  preset.cpp  rando_config.cpp  settings.cpp  ui.cpp  window.cpp
src/f_ap/: f_ap_game.cpp
src/f_op/: f_op_actor_mng.cpp  f_op_overlap_req.cpp
src/f_pc/: f_pc_line_iter.cpp  f_pc_manager.cpp
src/m_Do/: m_Do_MemCard.cpp  m_Do_MemCardRWmng.cpp  m_Do_dvd_thread.cpp  m_Do_ext.cpp  m_Do_graphic.cpp  m_Do_lib.cpp  m_Do_machine.cpp  m_Do_main.cpp
(+8 files in other folders)
